Popups now use a11y_wrap_focus helper plus some other accessibility fixes

--- a/src/core/less/base.less
+++ b/src/core/less/base.less
@@ -301,7 +301,7 @@
     }
 
 /*HIDDEN FOCUS GUARD*/
-#a11y-focusguard {
+.a11y-focusguard {
     left:0px !important;
     bottom:0px !important;
     width:auto !important;
